# django_project-2

./: pyproject.toml
notes/noteapp/: forms.py  models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py
notes/noteapp/templates/noteapp/: base.html  tag.html
notes/notes/: settings.py  urls.py
