[tool.poetry]
name = "django-project-2"
version = "0.1.0"
description = ""
authors = ["lumi-ua <tanichka.chirkova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
